objects/Semester_Detail__c.object
<CustomObject>
    <label>Semester Detail</label>
    <nameField>
        <label>Semester  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semester Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>BRANCH__c</fullName>
        <label>BRANCH</label>
        <referenceTo>BRANCH__c</referenceTo>
        <relationshipLabel>Semester Details</relationshipLabel>
        <relationshipName>Semester_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject_1__c</fullName>
        <defaultValue>&quot;bahubali&quot;</defaultValue>
        <label>Subject 1</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_2__c</fullName>
        <label>Subject 2</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_3__c</fullName>
        <label>Subject 3</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>